Document Artifact Extraction + Update .gitignore
Added comprehensive documentation for output/ directory
- Explains naming convention (artifact_YYYYMMDD_HHMMSS_N.ext)
- Usage examples and tips
- Supported languages (15+)
- Complete workflow guide

Updated .gitignore:
- Ignore user-generated artifacts (artifact_*.*)
- Allow output/README.md for documentation
- Keep output/ directory in repo

Now the repository includes:
 Working Artifact Extraction
 Documentation of how it works
 Example structure

Users will automatically get code saved to output/
No more manual copy-pasting from terminal

--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,15 @@ loans.json
 ig_session.json
 tiktok_cookies.txt
 
+# 💾 ARTIFACT EXTRACTION OUTPUT
+# ─────────────────────────────────────────────────────────────────────────────
+# Ignorar archivos generados por usuarios, pero permitir ejemplos
+output/artifact_*.py
+output/artifact_*.js
+output/artifact_*.ts
+# Permitir el README de output/
+!output/README.md
+
 # ─────────────────────────────────────────────────────────────────────────────
 # 🗑️ MISC
 # ─────────────────────────────────────────────────────────────────────────────
